# k-auth-services

./: .gitignore  .ruffignore  DEPLOY_GUIDE.md  READY_TO_DEPLOY.md  alembic.ini  docker-compose.yml  pyproject.toml  quickstart.sh
about/: architecture.md  structure.json  structure.md
alembic/: env.py
alembic/versions/: b8352b457691_initial_migration_kauth_db.py  d2991ea69294_create_plan_services_table.py
app/: main.py
app/application/dto/: AuthenticationDTO.py  PaginationParams.py  QuotaCheckDTO.py  ServiceAccessDTO.py  TokenValidationDTO.py
app/application/port/input/: IAuthenticateUser.py  ICheckQuota.py  ILinkAuthProvider.py  IRefreshToken.py  IRegisterUser.py  IResendOtp.py  IRevokeSession.py  IValidateServiceAccess.py  IValidateToken.py
app/application/port/output/: IApiKeyRepository.py  IAuthProviderRepository.py  IJwtService.py  IOtpCodeRepository.py  IPlanRepository.py  IPlanServiceRepository.py  IQuotaRepository.py  IServiceAccessRepository.py  IServiceRepository.py  ISessionRepository.py  ITransactionLogger.py  IUserPlanRepository.py  IUserRepository.py
app/application/service/: AuthenticationService.py  LinkAuthProviderService.py  QuotaManagementService.py  RefreshTokenService.py  ResendOtpService.py  RevokeSessionService.py  ServiceAccessValidationService.py  TokenValidationService.py  UserRegistrationService.py
app/application/usecase/: AuthenticateUserUseCase.py  RegisterUserUseCase.py
app/domain/: AuthProvider.py  DatabaseTransactionLog.py  OtpCode.py  Permission.py  Plan.py  PlanPermission.py  ServerConfig.py  Service.py  User.py  UserBehaviorLog.py  UserPlan.py  ValueObjects.py
app/domain/authentication/: OtpCode.py
app/domain/authorization/: ApiKey.py  ServiceAccess.py  Session.py  TokenPolicy.py
app/domain/exceptions/: AuthenticationExceptions.py  AuthorizationExceptions.py  BaseException.py  RateLimitExceptions.py  UserExceptions.py  __init__.py
app/domain/log/: ExternalTransactionLog.py
app/domain/service/: PlanService.py  Quota.py  QuotaDefaults.py
app/infrastructure/: dependencies.py
app/infrastructure/adapter/input/api/v1/: Auth.py
app/infrastructure/adapter/input/http/: AuthController.py  OtpController.py  UserController.py  ValidationController.py
app/infrastructure/adapter/input/middleware/: ExceptionHandler.py  LoggingMiddleware.py
app/infrastructure/adapter/output/database/mappers/: ApiKeyMapper.py  AuthProviderMapper.py  OtpCodeMapper.py  (+8 more)
app/infrastructure/adapter/output/jwt/: JwtService.py
app/infrastructure/config/: EnvConfig.py
app/infrastructure/config/database/: DatabaseSession.py
app/infrastructure/config/database/persistence/: ApiKeyModel.py  AuthProviderModel.py  BaseModel.py  DatabaseTransactionLogModel.py  ExternalTransactionLogModel.py  OtpCodeModel.py  PermissionModel.py  PlanModel.py  PlanPermissionModel.py  PlanServiceModel.py  QuotaModel.py  ServiceAccessModel.py  ServiceModel.py  SessionModel.py  UserBehaviorLogModel.py  UserModel.py  UserPlanModel.py  __init__.py
app/infrastructure/config/database/redis/: RedisClient.py
app/infrastructure/config/server/: CorsMiddlewareSettings.py  Settings.py
app/shared/: ContactValidator.py  Cryptography.py  DateTime.py  Exceptions.py  Logger.py  OtpRateLimiter.py  ServiceAccessEncryptor.py  TokenGenerator.py  UuidGenerator.py
app/tests/e2e/: ddos_test.py
app/tests/integration/: test_env_config_loading.py  test_quota_management_with_defaults.py
app/tests/unit/: test_env_config.py  test_quota_defaults.py  tests_UserRegisterUseCase.py
docker/postgres/: init.sql
history/: 2026-01-21-i-have-stopped-on-coding-with-previous-agent-about.txt  history.txt
scripts/: gen_structures.sh  init_db.py  run_development_mode.sh  run_production_mode.sh  seed_database.py  start_server.sh  test_requests.sh
(+12 files in other folders)
