[tool.poetry]
name = "auth-app"
version = "0.1.0"
description = "Scalable authentication service for multi-microservices architecture"
authors = ["Auth Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.45"
psycopg2-binary = "^2.9.11"
alembic = "^1.18.1"
redis = "^7.1.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
pyjwt = "^2.10.1"
cryptography = "^46.0.3"
structlog = "^25.5.0"
python-dotenv = "^1.2.1"
bcrypt = "^5.0.0"
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from exception
    "N803",   # argument name should be lowercase
    "I001",   # variable in function should be lowercase
    "UP043",  # f-string support for single braces
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["S101"]
"**/persistence/*Model.py" = ["E711", "E712"]  # SQLAlchemy filter syntax
"**/shared/Exceptions.py" = ["N818"]  # Exception naming convention (company choice)
"alembic/env.py" = ["E402", "F401", "I001"]  # Alembic pattern - models imported for metadata registration

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "redis.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["tests_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
